restore log backup no recovery mode

--- a/src/app.config
+++ b/src/app.config
@@ -1,7 +1,32 @@
-database.host=localhost 
-database.port=1433 
-database.name=fishgraph
-database.user=sa 
-database.pass=rahasia
+#setting untuk backup
+backup.database.host=localhost 
+backup.database.port=1433 
+backup.database.name=WideWorldImporters
+backup.database.user=sa 
+backup.database.pass=rahasia
 backup.full.folder=C:\\temp\\sqlserver_tools\\full
 backup.log.folder=C:\\temp\\sqlserver_tools\\log
+
+#setting untuk restore (target)
+restore.db.target.host=localhost
+restore.db.target.port=1433
+restore.db.target.name=WideWorldImporters2
+restore.db.target.user=sa
+restore.db.target.pass=rahasia
+restore.db.target.temp_folder=c:\\temp\\sqlserver_tools\\temp_restore
+
+#setting untuk restore (source)
+restore.db.source.host=localhost
+restore.db.source.port=1433
+restore.db.source.name=WideWorldImporters
+restore.db.source.user=sa
+restore.db.source.pass=rahasia
+restore.db.source.file_url=http://localhost/sqlserver_tools/
+restore.db.source.log_dir=C:\\temp\\sqlserver_tools\\log\\
+
+#setting untuk restore (witness)
+restore.db.witness.host=localhost
+restore.db.witness.port=1433
+restore.db.witness.name=witness
+restore.db.witness.user=sa
+restore.db.witness.pass=rahasia
